--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -56,9 +56,9 @@ h1.s-title{
 
 /*Rect ping bar*/
 
-.rect_ping{
+/*.rect_ping{
   fill:rgba(255, 255, 255, 0.46);
-}
+}*/
 .hidden {
   display: none;
 }
@@ -150,7 +150,7 @@ div.tooltip {
 }
 
 .mon_bar:hover{
-  orangered
+  fill:orangered
 }
 .bar:hover {
   fill: orangered ;
@@ -212,9 +212,46 @@ div.tooltip {
 
 /*Ping panel*/
 
-.display_ping_data{
-  fill:rgba(128, 129, 132, 0.34);
-  rx: 15px;
-  ry: 15px;
+#panel_ping_result{
+  position: absolute;
+  height: 200px;
+  width: 320px;
+  top:480px;
+  left:30px;
+  background-color: rgba(128, 129, 132, 0.34);
+  /*border-radius: 15px;*/
   box-shadow: 0px 0px 2px 0px #a6a6a6;
 }
+
+.list-wrpaaer{
+  height: 200px;
+  width: 320px;
+  font-size: 10px;
+}
+.list-wrpaaer ul{
+  color:rgba(255, 255, 255, 0.37);
+  margin: 0 0 0 5px;
+  padding: 5px 0 5px 0;
+
+}
+.list-wrpaaer ul li{
+  margin: 0 0 0 5px;
+  padding: 5px 0 5px 0;
+  border-bottom: 0px dotted rgba(255, 255, 255, 0.37);
+}
+.error{
+  color:red;
+}
+.info{
+  color:aquamarine;
+}
+/*.smartmarquee {
+  position: relative;
+  overflow: hidden;
+}
+
+.smartmarquee .container {
+  position: absolute;
+}
+
+*/
