--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -262,6 +262,7 @@ div.tooltip {
 }
 
 .label{
+  margin-left: 0.3em;
   display: inline;
   padding: .2em .6em .3em;
   font-size: 75%;
@@ -276,10 +277,13 @@ div.tooltip {
 .info_title{
   color: rgba(255, 255, 255, 0.9);
   font-size: 1.6em;
+  padding-left: 1em;
 }
 .info_normal{
   color: rgba(255, 255, 255, 0.8);
   font-size: 1em;
+  padding-left: 1em;
+  padding-right: 0.7em;
 }
 
 .list-wrpaaer{
